--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,9 @@
     <dimen name="input_text_small">12sp</dimen>
     <dimen name="input_margin_xsmall">4dp</dimen>
     <dimen name="input_margin_large">24dp</dimen>
+    <dimen name="label_text_xxxlarge">24sp</dimen>
+    <dimen name="margin_medium">16dp</dimen>
+    <dimen name="margin_large">24dp</dimen>
+    <dimen name="margin_xxlarge">40dp</dimen>
+    <dimen name="margin_xlarge">32dp</dimen>
 </resources>
