--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,41 @@
 
     <style name="LabelText" parent="Widget.MaterialComponents.TextView">
         <item name="android:textSize">@dimen/label_text_large</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/grey_100</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+    </style>
+
+    <style name="LabelHelperText" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textSize">@dimen/label_text_small</item>
+        <item name="android:textColor">@color/grey_100</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
+    </style>
+
+    <style name="AppInputText" parent="Widget.MaterialComponents.TextView">
+        <item name="android:textSize">@dimen/label_text_large</item>
+        <item name="android:textColor">@color/grey_100</item>
+        <item name="android:fontFamily">@font/roboto_regular</item>
+    </style>
+
+    <style name="AppPrimaryButton" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">@dimen/label_text_xlarge</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:background">@color/deals_and_rewards_red</item>
+        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">4dp</item>
+        <item name="android:strokeColor">@color/deals_and_rewards_red</item>
+        <item name="android:radius">4dp</item>
+    </style>
+
+    <style name="AppSecondaryButton" parent="Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:textSize">@dimen/label_text_xlarge</item>
+        <item name="android:textColor">@color/deals_and_rewards_red</item>
+        <item name="android:fontFamily">@font/roboto_medium</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 </resources>
