--- a/app/src/main/res/layout/activity_unlock_reset_flow_mfa.xml
+++ b/app/src/main/res/layout/activity_unlock_reset_flow_mfa.xml
@@ -137,7 +137,8 @@
                 style="@style/LabelText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/input_margin_medium"
+                android:layout_marginTop="@dimen/margin_large"
+                android:layout_marginHorizontal="@dimen/input_margin_medium"
                 android:text="@string/label_patient_last_name"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/il_patient_first_name" />
@@ -167,7 +168,7 @@
             <androidx.constraintlayout.widget.Group
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:constraint_referenced_ids="txt_patient_first_name,il_patient_first_name,txt_patient_last_name,il_patient_last_name"
                 android:id="@+id/groupUnlockAccount" />
 
